k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haruka
  labels:
    istio.io/dataplane-mode: ambient
